--- a/assets/css/content.scss
+++ b/assets/css/content.scss
@@ -13,6 +13,7 @@ body {
   font-size: 2rem;
   line-height: 1.6em;
   color: var(--section-light-text-color);
+  direction: rtl;
 }
 
 ::-moz-selection {
