--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -145,7 +145,7 @@ body {
 /* Left sticky menu */
 .fixed-nav {
   background-color: var(--section-light-bg-color);
-  border-radius: 0 25px 20px 0;
+  border-radius: 25px 0 0 20px;
   padding: 1em 1.5em;
   display: none;
   flex-direction: column;
