--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -20,14 +20,14 @@
 
     /* === Alternating content (post) sections  === */
     /* Light section - text color */
-    --section-light-text-color: #3a4145;
+    --section-light-text-color: #02316a;
     /* Light section - background color */
-    --section-light-bg-color: #f2efe8;
+    --section-light-bg-color: #ffffff;
 
     /* Dark section - text color */
     --section-dark-text-color: var(--section-light-bg-color);
     /* Dark section - background color */
-    --section-dark-bg-color: #b80135;
+    --section-dark-bg-color: #02316a;
 
     /* Light&Dark section >quote. Suppressive color, compared to 'Light section - text color'*/
     --section-uni-quote: grey;
