add border for image

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -278,6 +278,10 @@ a.fn-item {
   margin: 0 auto;
 }
 
+.item-image {
+  border-radius: 8px;
+}
+
 /** ==========  Site footer ============ */
 .site-footer {
   background: var(--footer-color-background);
