--- a/layouts/partials/item.html
+++ b/layouts/partials/item.html
@@ -3,7 +3,7 @@
 	<br>
 
 	<span class="post-content">	
-		<img src="{{ .Params.Image }}"/>
+		<img class="item-image" src="{{ .Params.Image }}"/>
 
 		{{ if in $.Language "en" }}
 			<b>{{ .Params.Name_en }}</b>
