--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -207,23 +207,17 @@ a.fn-item {
     // On alt posts move the triangle to the right and match the background the color
     .post-after {
       left: unset;
-      right: 6%;
-      border-top-color: var(--section-dark-bg-color);
+      background-color: #C4944C;
     }
   }
 
   /* The triangular parts between posts */
   .post-after {
     position: absolute;
-    bottom: -40px;
     z-index: 1;
-    left: 6%;
-    width: 0;
-    height: 0;
-    border-left: 60px solid transparent;
-    border-right: 60px solid transparent;
-    border-top: 50px solid var(--color-background);
-    border-radius: 25px;
+    background-color: #C4944C;
+    width: 100%;
+    height: 10px;
   }
 }
 
