--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -272,7 +272,10 @@ a.fn-item {
 }
 
 .item-image {
-  border-radius: 8px;
+  border-radius: 50%;
+  width:70%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
 }
 
 /** ==========  Site footer ============ */
