--- a/layouts/partials/item.html
+++ b/layouts/partials/item.html
@@ -45,7 +45,7 @@
 				{{ end }}
 			{{ end }}
 			<br>
-			{{ .Params.Price }} تومن
+			{{ partial "persianNumber.html" .Params.Price }} تومن
 		{{ end }}
 
 		</br>
