--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -97,7 +97,8 @@ body {
 
   a.btn {
     text-decoration: none;
-    background-color: var(--highlight);
+    border-color: var(--highlight);
+    border: 2px solid var(--highlight);
     color: var(--highlight-contrast);
     border-radius: 6px;
     -webkit-border-radius: 6px;
