--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -273,9 +273,9 @@ a.fn-item {
 }
 
 .item-image {
-  border-radius: 50%;
+  border-radius: 2%;
   width:70%;
-  aspect-ratio: 1 / 1;
+  // aspect-ratio: 1 / 1;
   object-fit: cover;
 }
 
